fixed scrollbar issue

--- a/app/client/stylesheets/components/pu-notification.sass
+++ b/app/client/stylesheets/components/pu-notification.sass
@@ -28,7 +28,7 @@
     article
         display: inline-block
         padding: 3px 0
-        max-width: 335px
+        max-width: 330px
 
         p
             padding-bottom: 5px
